crdb/dev/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb-lb-internal
  namespace: default
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-name: "dev-crdb-internal-lb"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-address-type: intranet
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-spec: "slb.s1.small"
spec:
  ports:
  - name: grpc
    port: 26258
    protocol: TCP
    targetPort: 26258
  - name: http
    port: 443
    protocol: TCP
    targetPort: 8080
  - name: sql
    port: 26257
    protocol: TCP
    targetPort: 26257
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: cockroachdb
    app.kubernetes.io/name: cockroachdb
    crdb: default
  type: LoadBalancer
