crdb/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb-lb-internal
  namespace: default
spec:
  ports:
    - name: grpc
      protocol: TCP
      port: 26258
      targetPort: 26258
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 443
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: sql
      protocol: TCP
      port: 26257
      targetPort: 26257
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: cockroachdb
    app.kubernetes.io/name: cockroachdb
    crdb: default
  type: ExternalName
  externalName: crdb-dev-internal.rss3.io
