crdb/dev/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cockroachdb
  namespace: guardian
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`crdb.dev.naturalselectionlabs.com`) || Host(`crdb.dev.nsl.xyz`)
    services:
    - name: cockroachdb
      port: 8080
      scheme: https
      serversTransport: cockroachdb
